--- a/style.css
+++ b/style.css
@@ -120,9 +120,9 @@ section p{
 .input-form i{
     width: 30px;
     height: 30px;
-    position: absolute;
+     position: absolute;
     top: 43%;
-    left: 70%;
+    left: 70%; 
     
     color: rgb(12, 12, 12);
     font-size: 1.5rem;
@@ -231,7 +231,7 @@ section p{
     font-size: 2rem;
 }
 
-@media  screen and (min-width:100px) and (max-width:576px) {
+@media  screen and (min-width:100px) and (max-width:567px) {
     
     section p{
         font-size: 1rem;
@@ -264,6 +264,9 @@ section p{
         flex-direction: column;
         align-items: center;
         padding: 10px;
+        display: flex;
+        flex-direction: row;
+
         
     }
 
@@ -273,8 +276,9 @@ section p{
         font-size: 15px;
         padding: 5px;
         position: absolute;
-        left: 18%;
+        left: 28%;
         top: 40%;
+        
     }
 
     .input-form i {
@@ -285,9 +289,13 @@ section p{
         color: #171413;
         font-size: 1rem;
         position: absolute;
-        top: 40%;
-        left: 72%;
-        
+        top: 34%;
+        left: 75%;
+       
+        height: 33px;
+        display: inline-flex;
+        justify-content: center;
+        align-items: center;
     }
 
     .input-img {
